--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "polymer": "Polymer/polymer#^2.0.0",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0",
     "paper-input": "PolymerElements/paper-input#~2.2.3",
-    "paper-tooltip": "PolymerElements/paper-tooltip#~2.1.1"
+    "paper-tooltip": "PolymerElements/paper-tooltip#~2.1.1",
+    "paper-checkbox": "PolymerElements/paper-checkbox#~2.0.4"
   },
   "resolutions": {
     "polymer": "^2.0.0"
